# template-forge

./: .gitignore  README.md  pyproject.toml
data/citations/: README.md  authority.jsonl
data/schema/: README.md  block.schema.json  clause_functions.json  manifest.schema.json  slot.schema.json
docs/: AUDIT.md  FACTS.md  OPERATING.md  PAIRED_REQUIREMENTS.md  RELATION.md  STRUCTURE.md
examples/: acknowledged_instrument.json  services_agreement.json
examples/manifests/: README.md  example__services_agreement.json
fixtures/: README.md  affidavit_of_service_summons.json  ahcd_not_prolong.json  ahcd_prolong.json  cert_of_service_discovery.json  certificate_of_authority_llc.json  certificate_of_authority_trust.json  certification_of_trust.json  certification_of_trust_recordable.json  clerks_certificate_foreclosure.json  clerks_certificate_lis_pendens.json  clerks_certificate_mechanics.json  commercial_lease_net.json  condo_assessment_revised.json  condo_assessment_special.json  condo_bylaws_nonprofit.json  condo_bylaws_small.json  condo_fee_demand_final.json  contract_minimal.json  contract_services.json  corporate_re_resolution_grantee_corp.json  corporate_re_resolution_grantor_llc.json  corporate_re_resolution_grantor_nonprofit.json  cover_letter_discharge_551.json  crim_appearance_guilty.json  crim_appearance_notguilty.json  crim_motion_suppress.json  criminal_discovery_letter.json  criminal_discovery_overdue.json  declaration_amendment_boundary.json  declaration_amendment_condo.json  declaration_amendment_covenants.json  declaration_amendment_eminent_domain.json  declaration_amendment_exhibit.json  declaration_amendment_subdivision.json  declaration_amendment_unanimous.json  declaration_amendment_withdrawal.json  declaration_condo_commercial.json  declaration_condo_declare.json  declaration_condo_leasehold.json  (+113 more)
fixtures/matters/: closing_doe_sale.json
src/template_forge/contracts/: __init__.py  classification.py  document.py  form_field.py  template.py
src/template_forge/engine/: assemble.py  audit.py  choices.py  export_docx.py  export_redline.py  facts.py  jurisdiction.py  paths.py  render.py  segments.py
src/template_forge/example_pack/: README.md
src/template_forge/generator/: deidentify.py  extract_entities.py  normalize.py  synthetic.py
tests/: test_contracts.py  test_engine.py  test_generator_and_data.py  test_jurisdiction.py  test_mining.py
(+17 files in other folders)
