[project]
name = "template-forge"
version = "0.1.0"
description = "A firm-agnostic framework for building and operating legal-document templates from your own documents."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "bedardandy" }]
keywords = ["legal", "templates", "document-assembly", "jinja2", "docx"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.11",
    "Topic :: Office/Business",
]
dependencies = [
    "jinja2>=3.1",
]

[project.optional-dependencies]
docx = ["python-docx>=1.1"]
pdf = ["pypdf>=4.0"]
mining = ["scikit-learn>=1.3", "python-docx>=1.1", "pyyaml>=6.0"]
deid = ["lxml>=5.0", "pyyaml>=6.0"]
# Optional: resolve citations + counting profile from published jurisdiction modules
# (jurisdiction-maine / -federal) behind the legal-jurisdictions contract. The
# engine.jurisdiction hook is additive — without this extra it falls back to the
# bundled data/citations/authority.jsonl unchanged.
jurisdictions = [
    "legal-jurisdictions @ git+https://github.com/bedardandy/legal-jurisdictions.git",
]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
    "jsonschema>=4.0",
]

[project.scripts]
template-forge-assemble = "template_forge.engine.assemble:main"
template-forge-mine = "template_forge.mining.pipeline:main"
template-forge-generate = "template_forge.generator.synthetic:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
template_forge = ["example_pack/**/*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
# E501 long lines, N802/N806/N812 naming, E741 ambiguous single-char names, and
# E702 compound statements are relaxed project-wide: much of engine/, mining/,
# and generator/ is grafted upstream code kept close to its original form.
ignore = ["E501", "N802", "N806", "N812", "E741", "E702"]

[tool.ruff.lint.per-file-ignores]
"src/template_forge/engine/*.py" = ["E401", "E402", "F841"]
"src/template_forge/tools/*.py" = ["E402", "F841"]
"src/template_forge/generator/*.py" = ["E402", "F841"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
